    - зміни в класі SilhouettesFinder:
        - видалено змінну image з конструктором, тепер зображення передається в метод countSilhouettes(..) як параметр,
          та передається в createSeparatedSilhouetteMask(..).
        - змінено метод countSilhouettes(..), тепер він створює масив пікселів з зображення та передає його в
          createSeparatedSilhouetteMask(..).
        - змінено метод createSeparatedSilhouetteMask(..), тепер він прораховує радіус стирання силуетів та передає його
          в метод separateSilhouettesMask(..) як параметр.
        - додано метод findMaxSizeOfSilhouette(..), який знаходить найбільший силует на зображенні для прорахунку
          радіуса стирання.
    - зміни в класі Eraser:
        - видалено змінну image з конструктором, тепер зображення не потрібне в класі, оскільки всі операції виконуються
          з масивом пікселів.
        - в методах separateSilhouettesMask(..) та findBackgroundMask(..) висота та ширина приходять параметром,
          щоб прибрати велику кількість викликів методів getWidth() та getHeight().
        - в методі findBackgroundMask(..) видалено виклик методу getRGB() для кожного пікселя, бо масив пікселів
          приходить параметром від separateSilhouettesMask(..).
        - метод estimateEraseRadius(..) видалено, тепер радіус вираховується в методі класі SilhouettesFinder.
    - зміни в класі SimilarPixelFinder:
        - квадрат дельти тепер прораховується в методі isPixelsSimilar(..), щоб прибрати статичний блок.
        - прорахунок квадрата дельти змінено на ціле число для уникнення непотрібних перетворень між типами.
    - зміни в класі BackgroundFinder:
        - в методі CalculateColorFrequencies(..) видалено виклик getRGB() для кожного пікселя, бо масив пікселів
          приходить параметром від findBackground(..).
    - зміни в класі BFSSearcher:
        - в методі runBFS(..) тип змінної queue замінено на ArrayDeque для можливості зміни методу пошуку з BFS на DFS
          одним рядком.