@@ -8,56 +8,51 @@ import java.util.List;
  * A class to find and count silhouettes in a given image.
  */
 public class SilhouettesFinder {
-    /**
-     * The ratio to filter out noise (small silhouettes).
-     * Silhouettes smaller than this ratio of the largest silhouette will be ignored.
-     * For example, with a ratio of 0.05, silhouettes smaller than 5% of the largest silhouette will be considered noise.
-     */
-    private static final double NOISE_FILTER_RATIO = 0.05;
 
-    /**
-     * Counts the number of valid silhouettes in the image.
-     * It creates a silhouette mask, finds all silhouettes, and filters out noise.
-     *
-     * @param image - the image to be analyzed
-     * @return - the count of valid silhouettes
-     */
-    public int countSilhouettes(BufferedImage image) {
-        int width = image.getWidth();
-        int height = image.getHeight();
-        int[] argbArray = new int[width * height];
-        image.getRGB(0, 0, image.getWidth(), image.getHeight(), argbArray, 0, image.getWidth());
-        List<Integer> silhouettes = findSilhouettes(createSeparatedSilhouetteMask(argbArray, width, height));
-        return countValidSilhouettes(silhouettes);
-    }
-    /**
-     * Creates a silhouette mask by separating silhouettes from the background.
-     *
-     * @param argbArray - the array of ARGB pixel values
-     * @param width     - the width of the image
-     * @param height    - the height of the image
-     * @return - a 2D boolean array where true indicates a background pixel and false indicates silhouette pixel
-     */
-    private boolean[][] createSeparatedSilhouetteMask(int[] argbArray, int width, int height) {
-        int backgroundARGB = new BackgroundFinder().findBackground(argbArray);
-        int maxSizeOfSilhouette = findMaxSizeOfSilhouette(argbArray, width, height, backgroundARGB);
-        return new Eraser().separateSilhouettesMask(argbArray, width, height, backgroundARGB, maxSizeOfSilhouette);
-    }
+//    /**
+//     * Counts the number of valid silhouettes in the image.
+//     * It creates a silhouette mask, finds all silhouettes, and filters out noise.
+//     *
+//     * @param image - the image to be analyzed
+//     * @return - the count of valid silhouettes
+//     */
+//    public int countSilhouettes(BufferedImage image) {
+//        int width = image.getWidth();
+//        int height = image.getHeight();
+//        int[] argbArray = new int[width * height];
+//        image.getRGB(0, 0, image.getWidth(), image.getHeight(), argbArray, 0, image.getWidth());
+////        List<Integer> silhouettes = findSilhouettes(createSeparatedSilhouetteMask(argbArray, width, height));
+//        return -1;
+//    }
+//    /**
+//     * Creates a silhouette mask by separating silhouettes from the background.
+//     *
+//     * @param argbArray - the array of ARGB pixel values
+//     * @param width     - the width of the image
+//     * @param height    - the height of the image
+//     * @return - a 2D boolean array where true indicates a background pixel and false indicates silhouette pixel
+//     */
+//    private boolean[][] createSeparatedSilhouetteMask(int[] argbArray, int width, int height) {
+////        int backgroundARGB = new BackgroundFinder().findBackground(argbArray);
+////        int maxSizeOfSilhouette = findMaxSizeOfSilhouette(argbArray, width, height, backgroundARGB);
+////        return new Eraser().separateSilhouettesMask(argbArray, width, height, backgroundARGB, maxSizeOfSilhouette);
+//        return null;
+//    }
 
-    /**
-     * Finds the maximum size of silhouettes in the image.
-     *
-     * @param argbArray      - the array of ARGB pixel values
-     * @param width          - the width of the image
-     * @param height         - the height of the image
-     * @param backgroundARGB - the ARGB value of the background color
-     * @return - the size of the largest silhouette
-     */
-    private int findMaxSizeOfSilhouette(int[] argbArray, int width, int height, int backgroundARGB) {
-        List<Integer> silhouettes =
-                findSilhouettes(new Eraser().findBackgroundMask(argbArray, backgroundARGB, width, height));
-        return findLargestSilhouetteSize(silhouettes);
-    }
+//    /**
+//     * Finds the maximum size of silhouettes in the image.
+//     *
+//     * @param argbArray      - the array of ARGB pixel values
+//     * @param width          - the width of the image
+//     * @param height         - the height of the image
+//     * @param backgroundARGB - the ARGB value of the background color
+//     * @return - the size of the largest silhouette
+//     */
+//    private int findMaxSizeOfSilhouette(int[] argbArray, int width, int height, int backgroundARGB) {
+//        List<Integer> silhouettes =
+//                findSilhouettes(new Eraser().findBackgroundMask(argbArray, backgroundARGB, width, height));
+//        return findLargestSilhouetteSize(silhouettes);
+//    }
 
     /**
      * Counts the number of valid silhouettes by filtering out small ones considered as noise.
@@ -65,9 +60,7 @@ public class SilhouettesFinder {
      * @param silhouettes - a list of silhouette sizes
      * @return - the count of valid silhouettes
      */
-    private int countValidSilhouettes(List<Integer> silhouettes) {
-        int largestSilhouetteSize = findLargestSilhouetteSize(silhouettes);
-        int minValidSize = (int) (largestSilhouetteSize * NOISE_FILTER_RATIO);
+    public int countValidSilhouettes(List<Integer> silhouettes, int minValidSize) {
         int silhouettesCount = 0;
         for (Integer silhouette : silhouettes) {
             if (silhouette > minValidSize) {
