@@ -59,7 +59,8 @@
           щоб прибрати велику кількість викликів методів getWidth() та getHeight().
         - в методі findBackgroundMask(..) видалено виклик методу getRGB() для кожного пікселя, бо масив пікселів
           приходить параметром від separateSilhouettesMask(..).
-        - метод estimateEraseRadius(..) видалено, тепер радіус вираховується в методі класі SilhouettesFinder.
+        - метод estimateEraseRadius(..) видалено, тепер радіус вираховується в методі класі SilhouettesFinder, бо раніше
+          цей метод викликав SilhouettesFinder для пошуку силуетів, що створювало зайві залежності між класами.
     - зміни в класі SimilarPixelFinder:
         - квадрат дельти тепер прораховується в методі isPixelsSimilar(..), щоб прибрати статичний блок.
         - прорахунок квадрата дельти змінено на ціле число для уникнення непотрібних перетворень між типами.
